fixed event info bar not responsive

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -313,8 +313,8 @@ h3 {
   margin-top: 2rem;
   list-style-type: none;
   position: absolute;
-  top: 44rem;
-  left: 35rem;
+  top: 40rem;
+  left: 15rem;
 }
 
 .menu-info-item {
